--- a/scp/css/styles.css
+++ b/scp/css/styles.css
@@ -201,7 +201,7 @@ body.fixed-left .side-menu.left {
 
 .content-page > .content {
   margin-bottom: 60px;
-  margin-top: 76px;
+  margin-top: 50px;
   padding: 20px 5px 15px 5px; }
 
 .button-menu-mobile {
